[project]
name = "pydoc-markdown-nuxt"
version = "0.1.0"
description = "A Nuxt.js plugin for rendering Python documentation with pydoc-markdown"
keywords = ["pydoc-markdown", "nuxt", "documentation", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Nuxt",
]
authors = [{name = "Uriel Curiel", email = "urielcuriel@outlook.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pydoc-markdown>=4.8.2",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
