[project]
name = "pydoc-markdown-nuxt"
version = "0.1.0"
description = "A Nuxt.js renderer for pydoc-markdown that generates documentation compatible with Nuxt Content and MDC"
keywords = ["pydoc-markdown", "nuxt", "documentation", "python", "mdc", "nuxt-content"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Nuxt",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
authors = [{name = "Uriel Curiel", email = "urielcuriel@outlook.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pydoc-markdown>=4.8.2",
    "PyYAML>=5.0",
]

[project.entry-points."pydoc_markdown.interfaces.Renderer"]
nuxt = "pydoc_markdown_nuxt:NuxtRenderer"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
